Closed Bug 1348299 Opened 8 years ago Closed 8 years ago

Only Fonts for Latin is effective to size

Categories

(Core :: Internationalization, defect, P1)

55 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 + fixed

People

(Reporter: euthanasia_waltz, Assigned: zbraniecki)

References

Details

(Keywords: intl, regression)

Attachments

(1 file)

STR: 1. Start firefox with new profile 2. Go to http://www.yahoo.co.jp/ 3. Open Options -> Content -> Advanced 4. Select 'Japanese' as 'Fonts for', 30 for 'Size', click OK 5. Go to 'Yahoo! JAPAN' tab AR: Font size is not changed. ER: Font size to be 30. STR:(continued) 6. Go to Options tab 7. Change 'Fonts & Colors' -> 'Size' to 16 8. Click Advanced 9. Select 'Latin' as 'Fonts for', 30 for 'Size', click OK 10. Go to 'Yahoo! JAPAN' tab AR: Font size is changed. ER: Font size to be 16. OS: Windows10, LinuxMint 18.1 mozregression: 2:20.60 INFO: Last good revision: 6d38ad302429c98115c354d643e81987ecec5d3c 2:20.60 INFO: First bad revision: 9a26ed658fdc1d14c6153451e7e45f6ec94292fb 2:20.60 INFO: Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6d38ad302429c98115c354d643e81987ecec5d3c&tochange=9a26ed658fdc1d14c6153451e7e45f6ec94292fb (no further information)
[Tracking Requested - why for this release]: regression, Fonts are not rendered according to locale setting. Regression window: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b1c8b28b9fa2a8424db940d4b657eb59b3f01ff3&tochange=b45d664c0a7b10d6a54ceae884f2f8956f10bbec Regressed by: Bug 1346674
Blocks: 1346674
Status: UNCONFIRMED → NEW
Component: Untriaged → Internationalization
Ever confirmed: true
Keywords: intl, regression
Product: Firefox → Core
Flags: needinfo?(gandalf)
Thank you for reporting and apologies for the regression. I'm taking the bug and will investigate it.
Assignee: nobody → gandalf
Status: NEW → ASSIGNED
Flags: needinfo?(gandalf)
Reporter, can you please provide me: - what language is your operating system in? - what language is your Firefox User Interface in? ?
Flags: needinfo?(euthanasia_waltz)
Windows10 Japanese edition and Nightly en-US build. Nightly seems to ignore html lang attribute for default font.
> Nightly seems to ignore html lang attribute for default font. My argument is that maybe before bug 1346674 we also ignored html lang attribute, but it just so happens that the reporters were using "ja" Operating System so we took the locale from there. In order to test I'd like to ask to test: - en-US Windows 10 - ja Firefox before the patch and after the patch - html lang="ja"
Need a bit of help with this one :m_kato. I suspect that this may be either the same as bug 1348259 (guessing doesn't work) or bug 1348535 (explicitly set lang attribute doesn't work), but I'm not sure.
Flags: needinfo?(euthanasia_waltz) → needinfo?(m_kato)
Tracking 55+ for this new regression.
Priority: -- → P1
This patch combines the old and new functionality for font detecting testing both the browser and OS for language/region.
FYI, Latest autoland build[1] seemed to fix this problem. [1]https://hg.mozilla.org/integration/autoland/rev/9e59049712448824a3717ce2d9dcbe1cf07da941 Mozilla/5.0 (Windows NT 10.0; WOW64; rv:55.0) Gecko/20100101 Firefox/55.0 ID:20170322001035
Flags: needinfo?(m_kato)
Comment on attachment 8849877 [details] Bug 1348299 - Use both, OS locale and app locale when trying to test for potentially Japanese fonts. https://reviewboard.mozilla.org/r/122602/#review125188 ::: gfx/thebes/gfxAndroidPlatform.cpp:150 (Diff revision 1) > + OSPreferences::GetInstance()->GetSystemLocale(appLocale); > + > + const nsDependentCSubstring lang(appLocale, 0, 2); > + if (lang.EqualsLiteral("ja")) { > + sIsJapanese = true; > + } Good. (Acutualy, system locale on Android doesn't return **current** system locale. We don't use JNI (ex. Resouces.getSystem().configuration.locale) yet, so it will be UX locale...)
Attachment #8849877 - Flags: review?(m_kato) → review+
Pushed by zbraniecki@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/258d94311e1e Use both, OS locale and app locale when trying to test for potentially Japanese fonts. r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: