Bug 1348299 - Use both, OS locale and app locale when trying to test for potentially Japanese fonts. r=m_kato

MozReview-Commit-ID: 5Dtq1WplSML